# planning-vfh_star

./: Bresenham.h  CMakeLists.txt  DebugTypes.h  Doxyfile.in  ElevationGrid.cpp  ElevationGrid.h  TraversabilityGrid.h  TreeSearch.cpp  TreeSearch.h  VFH.cpp  VFH.h  VFHStar.cpp  VFHStar.h  VFHStarTest.cpp  manifest.xml  vfh_star.pc.in
src/: Bresenham.h  CMakeLists.txt  DebugTypes.h  DriveMode.cpp  DriveMode.hpp  ElevationGrid.cpp  ElevationGrid.h  Grid.cpp  Grid.h  HeuristicLUT.cpp  HeuristicLUT.h  HorizonPlanner.cpp  HorizonPlanner.hpp  NNLookup.cpp  NNLookup.hpp  NNLookupBox.cpp  NNLookupBox.hpp  NNLookupTest.cpp  RadialLookUpTable.cpp  RadialLookUpTable.hpp  SearchTree.cpp  TraversabilityGrid.cpp  TraversabilityGrid.h  TraversabilityMapGenerator.cpp  TraversabilityMapGenerator.h  Tree.cpp  Tree.hpp  TreeNode.cpp  TreeNode.hpp  TreeSearch.cpp  TreeSearch.h  Types.h  VFH.cpp  VFH.h  VFHStar.cpp  VFHStar.h  VFHStarTest.cpp  vfh_star.pc.in
test/: CMakeLists.txt  VFHStarTest.cpp
viz/: CMakeLists.txt  PluginLoader.cpp  TraversabilityMapGeneratorVisualization.cpp  TraversabilityMapGeneratorVisualization.h  VFHTreeVisualization.cpp  VFHTreeVisualization.hpp  vfh_star-viz.pc.in  vizkit_plugin.rb
